tests/golden/03_array_bounds.stderr
runtime error: array index out of bounds at line 3
