tests/golden/03_array_bounds.ml
int main() {
    int[2] a = [10, 20];
    print(a[2], "\n");
    return 0;
}
